fix section layout

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     </nav>
     <main>
       <h1 class="text-center mb-5 mt-5">Our Menu</h1>
-      <section class="container-fluid content-section">
+      <div class="container-fluid content-section">
         <div class="row">
-          <div
+          <section
             id="#chicken"
             class="col-xs-12 col-md-6 col-lg-4 p-0 p-lg-3 mb-3"
           >
@@ -82,8 +82,8 @@
                 <a class="d-md-none" href="#top">Scroll to top</a>
               </p>
             </div>
-          </div>
-          <div id="Beef" class="col-xs-12 col-md-6 col-lg-4 p-0 p-lg-3 mb-3">
+          </section>
+          <section id="Beef" class="col-xs-12 col-md-6 col-lg-4 p-0 p-lg-3 mb-3">
             <div class="bg-white shadow-sm p-3 ml-md-2 ml-lg-0">
               <h3 class="text-center mt-2">Beef</h3>
               <p>
@@ -101,8 +101,8 @@
                 <a class="d-md-none" href="#top">Scroll to top</a>
               </p>
             </div>
-          </div>
-          <div id="Sushi" class="col-xs-12 col-md-12 col-lg-4 p-0 p-lg-3 mb-3">
+          </section>
+          <section id="Sushi" class="col-xs-12 col-md-12 col-lg-4 p-0 p-lg-3 mb-3">
             <div class="bg-white shadow-sm p-3">
               <h3 class="text-center mt-2">Sushi</h3>
               <p>
@@ -120,9 +120,9 @@
                 <a class="d-md-none" href="#top">Scroll to top</a>
               </p>
             </div>
-          </div>
+          </section>
         </div>
-      </section>
+      </div>
     </main>
     <!--/.Navbar-->
   </body>
