--- a/fb_account_kit.html
+++ b/fb_account_kit.html
@@ -5,35 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <script>
-      window.fbAsyncInit = function() {
-        FB.init({
-          appId: '450640655668044',
-          xfbml: true,
-          version: 'v3.3'
-        })
-        FB.AppEvents.logPageView()
-      }
-      ;(function(d, s, id) {
-        var js,
-          fjs = d.getElementsByTagName(s)[0]
-        if (d.getElementById(id)) {
-          return
-        }
-        js = d.createElement(s)
-        js.id = id
-        js.src = 'https://connect.facebook.net/en_US/sdk.js'
-        fjs.parentNode.insertBefore(js, fjs)
-      })(document, 'script', 'facebook-jssdk')
-    </script>
   </head>
   <body>
-    <div
-      class="fb-like"
-      data-share="true"
-      data-width="450"
-      data-show-faces="true"
-    ></div>
     <form
       method="get"
       action="https://www.accountkit.com/v1.0/basic/dialog/sms_login/"
@@ -42,7 +15,7 @@
       <input
         type="hidden"
         name="redirect"
-        value="https://quynguyen-tech.github.io/module3-solution"
+        value="https://quynguyen-tech.github.io/module3-solution/"
       />
       <input type="hidden" name="state" value="2476847623846237864237864" />
       <input type="hidden" name="fbAppEventsEnabled" value="true" />
