--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-<<<<<<< HEAD
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -40,7 +39,8 @@
       async
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
-  <link href="/public/css/main.8fece1f0.css" rel="stylesheet"></head>
+    <link href="/public/css/main.8fece1f0.css" rel="stylesheet" />
+  </head>
 
   <body
     className="m-page--fluid m--skin- m-content--skin-light2 m-header--fixed m-header--fixed-mobile m-aside-left--enabled m-aside-left--skin-dark m-aside-left--offcanvas m-footer--push m-aside--offcanvas-default"
@@ -505,79 +505,6 @@
         })
       })
     </script>
-  <script type="text/javascript" src="/public/js/main.296b2382.js"></script></body>
-=======
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
-    <script src="https://sdk.accountkit.com/en_US/sdk.js"></script>
-
-    <script>
-      // initialize Account Kit with CSRF protection
-      AccountKit_OnInteractive = function() {
-        AccountKit.init({
-          appId: '2318830295005855',
-          state: '55262304ad4a1e1d4eb78fa2d40e8c75',
-          version: 'v1.0',
-          fbAppEventsEnabled: true,
-          redirect: 'https://quynguyen-tech.github.io/module3-solution/'
-        })
-      }
-
-      // login callback
-      function loginCallback(response) {
-        if (response.status === 'PARTIALLY_AUTHENTICATED') {
-          var code = response.code
-          var csrf = response.state
-          // Send code to server to exchange for access token
-        } else if (response.status === 'NOT_AUTHENTICATED') {
-          // handle authentication failure
-        } else if (response.status === 'BAD_PARAMS') {
-          // handle bad parameters
-        }
-      }
-
-      // phone form submission handler
-      function smsLogin() {
-        var countryCode = document.getElementById('country_code').value
-        var phoneNumber = document.getElementById('phone_number').value
-        AccountKit.login(
-          'PHONE',
-          { countryCode: countryCode, phoneNumber: phoneNumber }, // will use default values if not specified
-          loginCallback
-        )
-      }
-
-      // email form submission handler
-      function emailLogin() {
-        var emailAddress = document.getElementById('email').value
-        AccountKit.login('EMAIL', { emailAddress: emailAddress }, loginCallback)
-      }
-    </script>
-  </head>
-  <body>
-    <input value="+1" id="country_code" />
-    <input placeholder="phone number" id="phone_number" />
-    <button onclick="smsLogin();">Login via SMS</button>
-    <div>OR</div>
-    <input placeholder="email" id="email" />
-    <button onclick="emailLogin();">Login via Email</button>
-
-    <form id="login_success" method="post" action="/login_success.php">
-      <input id="csrf" type="hidden" name="csrf" />
-      <input id="code" type="hidden" name="code" />
-    </form>
-
-    <script>
-      function loginCallback(response) {
-        if (response.status === 'PARTIALLY_AUTHENTICATED') {
-          document.getElementById('code').value = response.code
-          document.getElementById('csrf').value = response.state
-          document.getElementById('login_success').submit()
-        }
-      }
-    </script>
+    <script type="text/javascript" src="/public/js/main.296b2382.js"></script>
   </body>
->>>>>>> 5299644220ccaf0d205f63fcd489b2991e533aa2
 </html>
