--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
       async
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
-    <link href="/public/css/main.8fece1f0.css" rel="stylesheet" />
-  </head>
+  <link href="/public/css/main.0666b1f6.css" rel="stylesheet"></head>
 
   <body
     className="m-page--fluid m--skin- m-content--skin-light2 m-header--fixed m-header--fixed-mobile m-aside-left--enabled m-aside-left--skin-dark m-aside-left--offcanvas m-footer--push m-aside--offcanvas-default"
@@ -61,7 +60,7 @@
     <script src="../public/js/dashforge.aside.js"></script>
     <script src="../public/js/dashforge.sampledata.js"></script>
     <script src="../public/lib/chart.js/Chart.bundle.min.js"></script>
-    <script>
+    <!-- <script>
       $(function() {
         'use strict'
 
@@ -504,7 +503,6 @@
           }
         })
       })
-    </script>
-    <script type="text/javascript" src="/public/js/main.296b2382.js"></script>
-  </body>
+    </script> -->
+  <script type="text/javascript" src="/public/js/main.5f5fe738.js"></script></body>
 </html>
