--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- begin:: Page -->
     <div id="root"></div>
     <!-- end:: Page -->
-    <script src="../public/lib/feather-icons/feather.min.js"></script>
+    <!-- <script src="../public/lib/feather-icons/feather.min.js"></script>
     <script src="../public/lib/jquery/jquery.min.js"></script>
     <script src="../public/lib/jquery.flot/jquery.flot.js"></script>
     <script src="../public/lib/jquery.flot/jquery.flot.stack.js"></script>
@@ -59,7 +59,7 @@
     <script src="../public/js/dashforge.js"></script>
     <script src="../public/js/dashforge.aside.js"></script>
     <script src="../public/js/dashforge.sampledata.js"></script>
-    <script src="../public/lib/chart.js/Chart.bundle.min.js"></script>
+    <script src="../public/lib/chart.js/Chart.bundle.min.js"></script> -->
     <!-- <script>
       $(function() {
         'use strict'
@@ -504,5 +504,5 @@
         })
       })
     </script> -->
-  <script type="text/javascript" src="/public/js/main.5f5fe738.js"></script></body>
+  <script type="text/javascript" src="/public/js/main.3d8ecf15.js"></script></body>
 </html>
